# python-sdk

./: CLAUDE.md  README.md  conftest.py  java-sdk-comparison.md  modular-split-and-java-feature-parity.md  pyproject.toml  to-implement.md
.github/workflows/: ci.yml
docs/: architecture.md  auth.md  bodies.md  errors.md  http.md  pipelines.md
src/dexpace/sdk/core/: __init__.py  generics.py
src/dexpace/sdk/core/client/: __init__.py  async_http_client.py  asyncio_http_client.py  http_client.py  urllib_http_client.py
src/dexpace/sdk/core/errors/: __init__.py  base.py  error_map.py  http.py  pipeline.py  serialization.py  streaming.py
src/dexpace/sdk/core/http/: __init__.py
src/dexpace/sdk/core/instrumentation/: __init__.py  client_logger.py  log_level.py  metrics.py  noop.py  tracer.py  url_redactor.py
src/dexpace/sdk/core/io/: __init__.py  io.py  (+8 more)
tests/: conftest.py
tests/auth/: test_credentials.py  test_policies.py
tests/client/: test_asyncio_http_client.py  test_urllib_http_client.py
tests/context/: test_promotion_chain.py
tests/errors/: test_hierarchy.py
tests/http/: test_async_bodies.py  test_etag.py  test_media_type.py  test_multipart.py  test_pagination.py  test_request.py  test_request_body.py  test_request_conditions.py  test_response.py  test_response_body.py  test_streaming.py  test_url.py
tests/instrumentation/: test_logger.py  test_url_redactor.py
tests/pipeline/: test_async_pipeline.py  test_observability_policies.py  test_pipeline.py  test_retry.py  test_review_fixes.py
tests/serde/: test_json_serde.py
tests/sse/: test_parser.py
(+57 files in other folders)
