[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dexpace-sdk-core"
version = "0.1.0"
description = "Zero-dependency Python SDK core for building HTTP client libraries."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [{ name = "Omar Aljarrah", email = "o.mazari.om63@gmail.com" }]
keywords = ["sdk", "http", "client", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/dexpace/python-sdk"
Repository = "https://github.com/dexpace/python-sdk"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dexpace*"]
namespaces = true
